[package]
name = "windbgx"
version = "0.1.0"
edition = "2021" 

[dependencies]
pelite = "0.10.0"
pdb = "0.8"
reqwest = { version = "0.12", features = ["blocking"] }
winapi = { version = "0.3", features = [
    "processthreadsapi",
    "winuser",
    "winbase",
    "synchapi",
    "errhandlingapi",
    "handleapi",
    "ioapiset",
    "psapi",
    "tlhelp32",
] }

windows = { version = "0.52.0", features = [
    "Win32_System_SystemServices",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_System_ProcessStatus",
] }

