[package]
name = "windbgx"
version = "0.1.0"
edition = "2021"   # more on this below

[dependencies]
pelite = "0.10.0"
pdb = "0.8"
slice = "0.0.4"
reqwest = { version = "0.12", features = ["blocking"] }

winapi = { version = "0.3", features = [
    "processthreadsapi",
    "winuser",
    "sysinfoapi",
    "winbase",
    "synchapi",
    "errhandlingapi",
    "handleapi",
    "ioapiset",
    "psapi",
    "tlhelp32",
] }

windows = { version = "0.58.0", features = [
    "Win32_System_Services",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_SystemInformation",
    "Win32_Foundation",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_System_ProcessStatus",
] }

